--- a/s3_piramide/CMakeLists.txt
+++ b/s3_piramide/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(glut_test)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_PREFIX_PATH "C:/SUPSI/freeglut")
-find_package(GLUT REQUIRED)
 
 include_directories("C:/SUPSI/freeglut/include")
 include_directories("C:/SUPSI/glew-2.1.0/include")
@@ -10,5 +8,6 @@ include_directories("C:/SUPSI/glew-2.1.0/include")
 link_directories("C:/SUPSI/freeglut/lib/x64")
 link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
 
-add_executable(glut_test glut_test.cpp)
-target_link_libraries(glut_test -lfreeGLUT -lglew32 -lopengl32 -lglu32)
+project(s3_piramide)
+add_executable(s3_piramide main.cpp)
+target_link_libraries(s3_piramide -lfreeGLUT -lglew32 -lopengl32 -lglu32)
