--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.15)
 project(grafica)
 add_subdirectory(s3_bandiera)
 add_subdirectory(s3_piramide)
+add_subdirectory(s4_casa)
