--- a/s5_casa/CMakeLists.txt
+++ b/s5_casa/CMakeLists.txt
@@ -9,5 +9,5 @@ link_directories("C:/SUPSI/freeglut/lib/x64")
 link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
 
 project(s4_casa)
-add_executable(s5_casa draw_utils.cpp main.cpp)
+add_executable(s5_casa draw_utils.cpp house.cpp main.cpp )
 target_link_libraries(s5_casa -lfreeGLUT -lglew32 -lopengl32 -lglu32)
