fix build macos

--- a/s3_piramide/CMakeLists.txt
+++ b/s3_piramide/CMakeLists.txt
@@ -1,13 +1,41 @@
 cmake_minimum_required(VERSION 3.15)
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_PREFIX_PATH "C:/SUPSI/freeglut")
+if(APPLE)
+    message(INFO ": PLATFORM APPLE")
 
-include_directories("C:/SUPSI/freeglut/include")
-include_directories("C:/SUPSI/glew-2.1.0/include")
+    include_directories("/usr/local/include")
+    find_package(OpenGL REQUIRED)
+    include_directories(${OpenGL_INCLUDE_DIRS})
+    link_directories(${OpenGL_LIBRARY_DIRS})
+    add_definitions(${OpenGL_DEFINITIONS})
+    if(NOT OPENGL_FOUND)
+        message(ERROR " OPENGL not found!")
+    endif(NOT OPENGL_FOUND)
 
-link_directories("C:/SUPSI/freeglut/lib/x64")
-link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
+    find_package(GLUT REQUIRED)
+    include_directories(${GLUT_INCLUDE_DIRS})
+    link_directories(${GLUT_LIBRARY_DIRS})
+    add_definitions(${GLUT_DEFINITIONS})
+    if(NOT GLUT_FOUND)
+        message(ERROR " GLUT not found!")
+    endif(NOT GLUT_FOUND)
+elseif(MSYS)
+    message(INFO ": PLATFORM WINDOWS")
+
+    set(CMAKE_PREFIX_PATH "C:/SUPSI/freeglut")
+    include_directories("C:/SUPSI/freeglut/include")
+    include_directories("C:/SUPSI/glew-2.1.0/include")
+
+    link_directories("C:/SUPSI/freeglut/lib/x64")
+    link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
+
+    set(OPENGL_LIBRARY -lopengl32)
+    set(GLUT_LIBRARY -lfreeGLUT -lglu32)
+    set(GLEW_LIBRARIES -lglew32)
+else()
+    message(ERROR " PLATFORM NOT SUPPORTED")
+endif()
 
 project(s3_piramide)
-add_executable(s3_piramide main.cpp)
-target_link_libraries(s3_piramide -lfreeGLUT -lglew32 -lopengl32 -lglu32)
+add_executable(${PROJECT_NAME} main.cpp )
+target_link_libraries(${PROJECT_NAME}  ${OPENGL_LIBRARY} ${GLUT_LIBRARY} ${GLEW_LIBRARIES})
