--- a/glut_test/CMakeLists.txt
+++ b/glut_test/CMakeLists.txt
@@ -1,14 +1,39 @@
 cmake_minimum_required(VERSION 3.15)
-project(glut_test)
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_PREFIX_PATH "C:/SUPSI/freeglut")
-find_package(GLUT REQUIRED)
+if(APPLE)
+    message(INFO ": PLATFORM APPLE")
 
-include_directories("C:/SUPSI/freeglut/include")
-include_directories("C:/SUPSI/glew-2.1.0/include")
+    include_directories("/usr/local/include")
+    find_package(OpenGL REQUIRED)
+    include_directories(${OpenGL_INCLUDE_DIRS})
+    link_directories(${OpenGL_LIBRARY_DIRS})
+    add_definitions(${OpenGL_DEFINITIONS})
+    if(NOT OPENGL_FOUND)
+        message(ERROR " OPENGL not found!")
+    endif(NOT OPENGL_FOUND)
 
-link_directories("C:/SUPSI/freeglut/lib/x64")
-link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
+    find_package(GLUT REQUIRED)
+    include_directories(${GLUT_INCLUDE_DIRS})
+    link_directories(${GLUT_LIBRARY_DIRS})
+    add_definitions(${GLUT_DEFINITIONS})
+    if(NOT GLUT_FOUND)
+        message(ERROR " GLUT not found!")
+    endif(NOT GLUT_FOUND)
+else()
+    message(INFO ": PLATFORM WINDOWS")
 
-add_executable(glut_test glut_test.cpp)
-target_link_libraries(glut_test -lfreeGLUT -lglew32 -lopengl32 -lglu32)
+    set(CMAKE_PREFIX_PATH "C:/SUPSI/freeglut")
+    include_directories("C:/SUPSI/freeglut/include")
+    include_directories("C:/SUPSI/glew-2.1.0/include")
+
+    link_directories("C:/SUPSI/freeglut/lib/x64")
+    link_directories("C:/SUPSI/glew-2.1.0/lib/release/x64")
+
+    set(OPENGL_LIBRARY -lopengl32)
+    set(GLUT_LIBRARY -lfreeGLUT -lglu32)
+    set(GLEW_LIBRARIES -lglew32)
+endif()
+
+project(glut_test)
+add_executable(${PROJECT_NAME} glut_test.cpp)
+target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARY} ${GLUT_LIBRARY} ${GLEW_LIBRARIES})
