serie 7, controlo volume

--- a/s7_casa/CMakeLists.txt
+++ b/s7_casa/CMakeLists.txt
@@ -34,6 +34,8 @@ else()
     set(GLEW_LIBRARIES -lglew32)
 endif()
 
+set(REQUIRED_LIBS ${GLUT_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_LIBRARY})
+
 project(s7_casa)
 add_executable(${PROJECT_NAME} draw_utils.cpp house.cpp main.cpp )
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARY} ${GLUT_LIBRARY} ${GLEW_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS})
