--- a/s7_casa/CMakeLists.txt
+++ b/s7_casa/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 14)
 if(APPLE)
     message(INFO ": PLATFORM APPLE")
@@ -19,6 +19,13 @@ if(APPLE)
     if(NOT GLUT_FOUND)
         message(ERROR " GLUT not found!")
     endif(NOT GLUT_FOUND)
+endif(APPLE)
+
+if(UNIX)
+    message(INFO ": PLATFORM LINUX")
+
+    set(OPENGL_LIBRARY -lGL)
+    set(GLUT_LIBRARY -lglut -lGLU)
 else()
     message(INFO ": PLATFORM WINDOWS")
 
