OpenGL3 Rotating Wall

--- a/esempi/esempi_serie_shader/opengl3/opengl3_cube/CMakeLists.txt
+++ b/esempi/esempi_serie_shader/opengl3/opengl3_cube/CMakeLists.txt
@@ -3,4 +3,7 @@ target_link_libraries(opengl3_cube ${REQUIRED_LIBS}  )
 
 configure_file(shaders/shader.frag shaders/shader.frag COPYONLY)
 configure_file(shaders/shader.vert shaders/shader.vert COPYONLY)
+
 configure_file(images/wood_texture.bmp images/wood_texture.bmp COPYONLY)
+configure_file(images/wall_texture.bmp images/wall_texture.bmp COPYONLY)
+configure_file(images/roof_texture.bmp images/roof_texture.bmp COPYONLY)
