--- a/esempi/esempi_serie_shader/opengl3/opengl3_cube/CMakeLists.txt
+++ b/esempi/esempi_serie_shader/opengl3/opengl3_cube/CMakeLists.txt
@@ -1,5 +1,8 @@
-add_executable(opengl3_cube opengl3_cube.cpp ../shaders_loader.cpp RgbImage.cpp Texture.cpp )
-target_link_libraries(opengl3_cube ${REQUIRED_LIBS}  )
+project(opengl3_cube)
+set(SOURCE_FILES opengl3_cube.cpp ../shaders_loader.cpp RgbImage.cpp Texture.cpp Vertex.cpp Box.cpp )
+
+add_executable(${PROJECT_NAME}  ${SOURCE_FILES})
+target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS}  )
 
 configure_file(shaders/shader.frag shaders/shader.frag COPYONLY)
 configure_file(shaders/shader.vert shaders/shader.vert COPYONLY)
