--- a/s13_casa/CMakeLists.txt
+++ b/s13_casa/CMakeLists.txt
@@ -1,9 +1,10 @@
 project(s13_casa)
-set(SOURCE_FILES Texture.cpp RgbImage.cpp light.cpp vertex.cpp camera.cpp draw_utils.cpp house.cpp main.cpp)
+set(SOURCE_FILES Texture.cpp RgbImage.cpp box.cpp shaders_loader.cpp vertex.cpp camera.cpp house.cpp main.cpp)
 
 configure_file(images/wall_texture.bmp images/wall_texture.bmp COPYONLY)
 configure_file(images/wood_texture.bmp images/wood_texture.bmp COPYONLY)
 configure_file(images/roof_texture.bmp images/roof_texture.bmp COPYONLY)
+configure_file(images/marble_texture.bmp images/marble_texture.bmp COPYONLY)
 
 configure_file(shaders/shader.frag shaders/shader.frag COPYONLY)
 configure_file(shaders/shader.vert shaders/shader.vert COPYONLY)
